# docs/swagger.yaml
@@ -11,10 +11,10 @@ definitions:
           USD: "500.00"
         type: object
     type: object
-  services_gw-currency-wallet_delivery.DeptWithResponse:
+  services_gw-currency-wallet_delivery.DeptResponse:
     properties:
       message:
-        example: deposit successful or withdrawal successful
+        example: Account topped up successfully
         type: string
       new_balance:
         additionalProperties:
@@ -37,7 +37,7 @@ definitions:
         example: 300
         type: number
       message:
-        example: currency exchange successful
+        example: Exchange successful
         type: string
       new_balance:
         additionalProperties:
@@ -72,6 +72,20 @@ definitions:
       message:
         example: User registered successfully
         type: string
+    type: object
+  services_gw-currency-wallet_delivery.WithResponse:
+    properties:
+      message:
+        example: Withdrawal successful
+        type: string
+      new_balance:
+        additionalProperties:
+          type: string
+        example:
+          EUR: "100.00"
+          RUB: "3000.00"
+          USD: "500.00"
+        type: object
     type: object
   services_gw-currency-wallet_delivery.authReq:
     properties:
@@ -278,7 +292,7 @@ paths:
         "200":
           description: Balance has been successfully replenished
           schema:
-            $ref: '#/definitions/services_gw-currency-wallet_delivery.DeptWithResponse'
+            $ref: '#/definitions/services_gw-currency-wallet_delivery.DeptResponse'
         "400":
           description: Invalid request format, negative amount, or invalid currency
           schema:
@@ -312,7 +326,7 @@ paths:
         "200":
           description: Funds have been successfully withdrawn
           schema:
-            $ref: '#/definitions/services_gw-currency-wallet_delivery.DeptWithResponse'
+            $ref: '#/definitions/services_gw-currency-wallet_delivery.WithResponse'
         "400":
           description: Invalid request format, negative amount, invalid currency,
             or insufficient funds
